--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -39,7 +39,7 @@
 
 	body {
 		background: _palette(bg);
-		overflow-x: hidden;
+		// overflow-x: hidden; // Dropped to allow sticky positioning
 
 		// Stops initial animations until page loads.
 			&.is-preload {
