--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -238,6 +238,7 @@
 
 	.emojilist {
 		padding-bottom: 16px;
+		min-height: 64px;
 	}
 	.listemoji img {
 		float: left;
@@ -246,7 +247,10 @@
 		width: 48px;
 		margin-top: 8px;
 		clear: both;
-		left: -16px;
 		position: relative;
 		left: -32px;
+	}
+
+	ul.noBullet {
+		list-style: none;
 	}
