--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 ///
 /// Paradigm Shift by HTML5 UP
 /// html5up.net | @ajlkn
@@ -36,7 +38,7 @@
 				}
 
 				&.third {
-					width: calc(#{100% / 3} - #{$gutter * (1 / 3)});
+					width: calc(#{100% / 3} - #{$gutter * math.div(1, 3)});
 				}
 
 				&.quarter {
