--- a/assets/sass/components/_gallery.scss
+++ b/assets/sass/components/_gallery.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 ///
 /// Paradigm Shift by HTML5 UP
 /// html5up.net | @ajlkn
@@ -151,7 +153,7 @@
 				'z-index #{_duration(gallery-lightbox-fadein)}'
 			));
 			-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-			background-color: transparentize(_palette(bg), 1 - _misc(gallery-lightbox-opacity));
+			background-color: color.adjust(_palette(bg), $alpha: _misc(gallery-lightbox-opacity));
 			height: 100%;
 			left: 0;
 			opacity: 0;
