--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 // Misc.
 	$misc: (
 		z-index-base:				10000,
@@ -41,14 +43,14 @@
 
 // Palette.
 	$palette: (
-		bg:						#ffffff,
-		fg:						#000000,
-		fg-bold:				#000000,
-		fg-light:				rgba(0,0,0,0.25),
-		border:					rgba(144,144,144,0.5),
-		border-bg:				rgba(144,144,144,0.1),
-		accent:					#9cdcdf,
-		accent-border:			desaturate(darken(#9cdcdf, 30%), 30),
-		accent-alt:				desaturate(darken(#9cdcdf, 10%), 20),
-		accent-bg:				transparentize(#9cdcdf, 0.75)
+		bg:             #ffffff,
+		fg:			  			#000000,
+		fg-bold:  			#000000,
+		fg-light:	  		rgba(0,0,0,0.25),
+		border:			  	rgba(144,144,144,0.5),
+		border-bg:  		rgba(144,144,144,0.1),
+		accent:		  		#9cdcdf,
+		accent-border:	color.adjust(#9cdcdf, $lightness: -30%),
+		accent-alt:     color.adjust(#9cdcdf, $lightness: -10%, $saturation: -20%),
+		accent-bg:      color.scale(#9cdcdf, $alpha: 0.75%)
 	);
